--- a/projeto01/css/style.css
+++ b/projeto01/css/style.css
@@ -4,4 +4,7 @@
 
 body{
   font-family: 'BenchNine', sans-serif;
+  max-width: 1440px;
+  min-width: 360px;
+  margin: 0 auto;
 }
